--- a/src/test/Resources/Config.properties
+++ b/src/test/Resources/Config.properties
@@ -1,9 +1,13 @@
 #---------------- Properties for Desktop Browser Automation Scenarios ----------------------------
-LOGIN_URL = 
+BROWSER=CHROME
+EXECUTION_ENV=TS1
+TS1_LOGIN_URL=https://edia-cstg.cloudapps.cisco.com/edia/home.do
 USERNAME=kdfadmin.gen
 PASSWORD=KdfAlfoMahesh15
-
+TS3_LOGIN_URL=https://edia-wstg.cloudapps.cisco.com/edia/home.do
 
 
 #---------------- Properties for API/WebService Automation Scenarios ----------------------------
-BASE_URI = 
+BASE_URI=XYZ 
+BASIC_AUTH_USERNAME=icwpricing.gen
+BASIC_AUTH_PASSWORD=1cwpr1c1ng
