--- a/src/test/Resources/Config.properties
+++ b/src/test/Resources/Config.properties
@@ -5,6 +5,11 @@ TS1_LOGIN_URL=https://edia-cstg.cloudapps.cisco.com/edia/home.do
 USERNAME=kdfadmin.gen
 PASSWORD=KdfAlfoMahesh15
 TS3_LOGIN_URL=https://edia-wstg.cloudapps.cisco.com/edia/home.do
+REGISTER_JDBC_DRIVER=com.mysql.jdbc.Driver
+DB_CONNECTION_URL=jdbc:mysql://localhost:3306/automationtestingdbedms
+DB_USERNAME=root
+DB_PASSWORD=Dump@123
+
 
 
 #---------------- Properties for API/WebService Automation Scenarios ----------------------------
