--- a/src/test/Resources/Config.properties
+++ b/src/test/Resources/Config.properties
@@ -2,13 +2,15 @@
 BROWSER=CHROME
 EXECUTION_ENV=TS1
 TS1_LOGIN_URL=https://edia-cstg.cloudapps.cisco.com/edia/home.do
-USERNAME=kdfadmin.gen
-PASSWORD=KdfAlfoMahesh15
+VALID_USERNAME=a2RmYWRtaW4uZ2Vu
+VALID_PASSWORD=S2RmQWxmb01haGVzaDE1
+INVALID_USERNAME=InvalidUsername
+INVALID_PASSWORD=InvalidPassword
 TS3_LOGIN_URL=https://edia-wstg.cloudapps.cisco.com/edia/home.do
-REGISTER_JDBC_DRIVER=com.mysql.jdbc.Driver
+REGISTER_JDBC_DRIVER=com.mysql.cj.jdbc.Driver
 DB_CONNECTION_URL=jdbc:mysql://localhost:3306/automationtestingdbedms
-DB_USERNAME=root
-DB_PASSWORD=Dump@123
+DB_USERNAME=cm9vdA==
+DB_PASSWORD=RHVtcEAxMjM=
 
 
 
