--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
-		<!--================================== SELENIUM IMPLEMENTATION DEPENDENCIES================================ -->
+		<!--================================== SELENIUM IMPLEMENTATION DEPENDENCY================================ -->
 		<!-- https://mvnrepository.com/artifact/io.appium/java-client -->
 		<dependency>
 			<groupId>io.appium</groupId>
@@ -54,21 +54,34 @@
 			<artifactId>selenium-java</artifactId>
 			<version>3.141.59</version>
 		</dependency>
+		<!--==================================SQL AND JDBC CONNECTION DEPENDENCY===================================== -->
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.13</version>
 		</dependency>
-		<!--==================================REPORTING FRAMEWORK DEPENDENC===================================== -->
-		<!-- TestNG -->	
+		<!--==================================REPORTING & LOGGIN DEPENDENCY===================================== -->
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>6.8</version>
-			<scope>test</scope>
+		    <groupId>org.testng</groupId>
+		    <artifactId>testng</artifactId>
+		    <version>6.10</version>
+		    <scope>test</scope>
 		</dependency>
-		<!--================================API SERVICES AUTOMATION TESTING DEPENDENCIE==========================-->
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+		<dependency>
+		    <groupId>com.aventstack</groupId>
+		    <artifactId>extentreports</artifactId>
+		    <version>3.1.5</version>
+		</dependency>
+		<!--================================API SERVICES AUTOMATION TESTING DEPENDENCY==========================-->
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
