--- a/.classpath
+++ b/.classpath
@@ -19,6 +19,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/akmukhop/Documents/MobileAutomationTesting/com.uiTestAutomationEDMS_v1.9.application/Resources/Drivers/ojdbc6.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
